--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@
 /* Contenido del mensaje */
 .message-content {
     background-color: #281f4b;
-   color:#fff;
+   color:#000;
     padding: 12px 16px;
     border-radius: 16px;
     max-width: 80%;
